[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/images/endingbackground.png" type="Texture" id=1]
[ext_resource path="res://Assets/images/B_spritesnew.png" type="Texture" id=2]
[ext_resource path="res://Assets/images/fire2.png" type="Texture" id=3]
[ext_resource path="res://Assets/images/fire1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Music/A_Ending.wav" type="AudioStream" id=5]
[ext_resource path="res://scripts/bend.gd" type="Script" id=6]
[ext_resource path="res://Assets/fonts/pixeled/Pixeled.ttf" type="DynamicFontData" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "transition"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("black:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=4]
resource_name = "theend"
length = 50.0
tracks/0/type = "value"
tracks/0/path = NodePath("text:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.5, 39.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 801 ), Vector2( 2, 801 ), Vector2( 2, -807 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("black2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 44.8, 49.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="bend" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 845.7, 528.916 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
flip_h = true
hframes = 2
vframes = 3

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 77.0746, 600.051 )
scale = Vector2( 0.257538, 0.257538 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 350.018, 345.492 )
scale = Vector2( 0.257538, 0.257538 )
frames = SubResource( 1 )
playing = true

[node name="AnimatedSprite3" type="AnimatedSprite" parent="."]
position = Vector2( 846.407, 191.343 )
scale = Vector2( 0.257538, 0.257538 )
frames = SubResource( 1 )
playing = true

[node name="AnimatedSprite4" type="AnimatedSprite" parent="."]
position = Vector2( 532.451, 256.397 )
scale = Vector2( 0.257538, 0.257538 )
frames = SubResource( 1 )
playing = true

[node name="AnimatedSprite5" type="AnimatedSprite" parent="."]
position = Vector2( 102.53, 217.421 )
scale = Vector2( 0.299964, 0.299964 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.592157, 0.0862745, 0.0862745, 0.313726 )

[node name="song" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="black" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="black2" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/transition = SubResource( 2 )

[node name="text" type="Label" parent="."]
margin_left = 2.0
margin_top = 801.0
margin_right = 822.0
margin_bottom = 1601.0
custom_colors/font_color = Color( 0.952941, 0.952941, 0.952941, 1 )
custom_fonts/font = SubResource( 3 )
text = "After what felt like hours, Bunny
has defeated Narkabhira and most
of his enemies. Bunny knows that
its not over, far from it. It was only
the beginning. Bunny is 
determined to restore civilazation,
even if it means that the entire human
race is extinct, he will keep on pushing
to bring life back to somewhat normal.
Until then, he will gaze at the crimson
sky."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ending" type="AnimationPlayer" parent="."]
anims/theend = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 6.8
autostart = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="ending" to="." method="_on_ending_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
